fix measure tool modal styles so it aligns properly in ie11

--- a/web/css/measure.css
+++ b/web/css/measure.css
@@ -5,10 +5,11 @@
   padding: 6px 10px;
 }
 
-.modal-dialog.toolbar-modal.measure-tool-modal {
-  top: unset;
+.modal-dialog.measure-tool-modal {
+  position: absolute;
   right: 10px;
   bottom: 151px;
+
   & .modal-body {
     padding: 8px 0 0;
     & div {
